--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="src/style.css" />
     <title>Cat Search</title>
+    <meta name="google-adsense-account" content="ca-pub-3273690063994188">
   </head>
   <body>
     <div id="App"></div>
